welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:30: error: ';' expected but 'else' found.
  else{
  ^ZigZag:42: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ZigZag:45: error: expected start of definition
	override def forward()  {
                 ^ZigZag:48: error: expected start of definition
	override def backward(i:Int) {
                 ^ZigZag:51: error: expected start of definition
	override def backward() {
                 ^ZigZag:54: error: Unmatched closing brace '}' ignored here
}
^